Reader: fix misaligned Follow buttons on list items

--- a/client/components/follow-button/style.scss
+++ b/client/components/follow-button/style.scss
@@ -15,11 +15,11 @@
 	}
 
 	&:first-child {
-		margin-top: 5px;
+		margin-top: 2px;
 	}
 
 	&:last-child {
-		margin-bottom: 5px;
+		margin-bottom: 2px;
 	}
 
 	&::-moz-focus-inner {
